2014-12-10  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 13.1.0-rc2 Released.

	* AST-2014-019: Fix crash when receiving a WebSocket packet with a
	  payload length of zero.

	  Frames with a payload length of 0 were incorrectly handled in
	  res_http_websocket. Provided a frame with a payload had been
	  received prior it was possible for a double free to occur. The
	  realloc operation would succeed (thus freeing the payload) but be
	  treated as an error. When the session was then torn down the payload
	  would be freed again causing a crash. The read function now takes
	  this into account.

	  This change also fixes assumptions made by users of
	  res_http_websocket. There is no guarantee that a frame received from
	  it will be NULL terminated.

	  ASTERISK-24472 #close
	  Reported by: Badalian Vyacheslav

2014-12-08  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 13.1.0-rc1 Released.

2014-12-08 16:53 +0000 [r429091]  Matthew Jordan <mjordan@digium.com>

	* rest-api/api-docs/playbacks.json, UPGRADE.txt,
	  rest-api/api-docs/channels.json, rest-api/api-docs/sounds.json,
	  rest-api/resources.json, CHANGES, include/asterisk/manager.h,
	  rest-api/api-docs/bridges.json,
	  rest-api/api-docs/recordings.json,
	  rest-api/api-docs/deviceStates.json,
	  rest-api/api-docs/endpoints.json,
	  rest-api/api-docs/mailboxes.json, rest-api/api-docs/events.json,
	  rest-api/api-docs/asterisk.json,
	  rest-api/api-docs/applications.json: AMI/ARI: Update version to
	  2.6.0/1.6.0 respectively for new features AMI/ARI are getting a
	  few enhancements in the next release of Asterisk 13. Per semantic
	  versioning, that warrants a bump in the minor version number, as
	  it reflects a backwards compatible change. Hence, this commit.

2014-12-08 16:41 +0000 [r429064-429089]  Mark Michelson <mmichelson@digium.com>

	* res/res_pjsip_session.c: Fix a crash that would occur when
	  receiving a 491 response to a reinvite. The reviewboard